<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <import type="eu.geekhome.asymptote.validation.MinLengthParams"/>

        <variable
            name="vm"
            type="eu.geekhome.asymptote.viewmodel.ResetPasswordDarkViewModel"/>
    </data>

    <eu.geekhome.asymptote.validation.controls.ValidationLinearLayout
        android:id="@+id/instr_fragment_reset_password_dark"
        style="@style/Layout.MatchXY.Vertical"
        android:padding="@dimen/common_medium_padding"
        tools:validationContext="@{vm.validation}">

        <TextView
            style="@style/Layout.MatchX"
            android:layout_marginTop="@dimen/common_medium_padding"
            android:gravity="center_horizontal"
            android:text="@string/reset_password"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <android.support.design.widget.TextInputLayout
            style="@style/Layout.MatchX">

            <android.support.design.widget.TextInputEditText
                style="@style/Layout.MatchX"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:text="@={vm.email}"
                app:validateEmail="@{@string/enter_correct_email}"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/instr_button_reset_password"
            style="@style/Common.Button.Orange.Centered"
            android:layout_width="match_parent"
            android:onClick="@{vm.resetPassword}"
            android:text="@string/reset_password"/>

    </eu.geekhome.asymptote.validation.controls.ValidationLinearLayout>
</layout>
