...
        <variable
            name="vm"
            type="eu.geekhome.asymptote.viewmodel.MainViewModel"/>
    </data>

    <LinearLayout
        android:id="@+id/instr_fragment_main"
        style="@style/Layout.MatchXY.Vertical">

        <include
            layout="@layout/actionbar_main"
            app:vm="@{vm.actionBarModel}"/>

...
